css/contact.css
.contact {
    /*border: 2px solid green;*/
    background-color: white;
    vertical-align: top;
    margin: 3%;
    padding: 1.5% 3% 3% 3%;
}



iframe, .panel {
    margin-bottom: 10px;
}


#title {
    font-weight: bolder;
    color: #7b0c00;
}


#contact-info {
    color: #7b0c00;
}


textarea {
    resize: none;
}


.panel-body {
    padding: 0;
}

